# rust-dotnet-io-binary

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: _7bit_code.rs  io.rs  lib.rs  slice.rs
src/io/: _7bit_code.rs  prim.rs  rw_7bit_code.rs  rw_prim.rs  rw_string.rs  string.rs
src/slice/: _7bit_code.rs  prim.rs  string.rs
