[package]
name = "dotnet-io-binary"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, optional = true }
derive_more = { version = "2.0.1", default-features = false, optional = true }
num-traits = { version = "0.2.19", default-features = false }

[features]
default = ["io"]
io = ["std", "arrayvec", "derive_more", "derive_more/from"]
std = ["arrayvec/std", "derive_more/std"]
arrayvec = ["dep:arrayvec"]
derive_more = ["dep:derive_more"]
