[package]
name = "dotnet-io-binary"
version = "0.1.0-alpha.6"
edition = "2024"
license = "MIT"
description = "dotnet System.IO.BinaryReader/BinaryWriter functionality."
readme = "README.md"
repository = "https://github.com/NewYearPrism/rust-dotnet-io-binary.git"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, optional = true }
derive_more = { version = "2.0.1", default-features = false, optional = true }
num-traits = { version = "0.2.19", default-features = false }

[features]
default = ["io"]
io = [
    "std",
    "arrayvec",
    "derive_more",
    "derive_more/from",
    "derive_more/error",
    "derive_more/display",
]
std = ["arrayvec/std", "derive_more/std"]
arrayvec = ["dep:arrayvec"]
derive_more = ["dep:derive_more"]
