[package]
name = "dotnet-io-binary"
version = "0.1.0-alpha.9"
edition = "2024"
license = "MIT"
description = "dotnet System.IO.BinaryReader/BinaryWriter functionality."
readme = "README.md"
repository = "https://github.com/NewYearPrism/rust-dotnet-io-binary.git"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false, optional = true }
num-traits = { version = "0.2.19", default-features = false }
thiserror = { version = "2.0.17", optional = true, default-features = false }

[features]
default = ["io"]
io = [
    "std",
    "dep:arrayvec", "dep:thiserror"
]
std = ["arrayvec/std", "thiserror/std"]
